--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,14 @@
   </head>
 
   <body>
-    <%= yield %>
-  </body>
+
+    <div class="container-fluid">
+            <%= render "common/navbar" %>
+            <%= yield %>
+             <%= render "common/flashes" %>
+        </div>
+
+        <%= render "common/footer" %>
+
+    </body>
 </html>
